<resources>
    <string name="app_name">COVID19\nPatientTracker</string>
    <string name="application_logo">Application logo</string>
    <string name="login_btn_text">PRIJAVI ME</string>
    <string name="login_decs">Informacioni sistem za pracenje stanja obolelih od Covid-19</string>
    <string name="login_hint_ime">Unesite vase ime</string>
    <string name="login_hint_prezime">Unesite vase prezime</string>
    <string name="login_hint_bolnica">Ime vase bolnice </string>
    <string name="login_hint_pin">Unesite PIN</string>
    <string name="PIN">1234</string>
    <string name="login_pin_errmsg">Wrong pin, pleas try again</string>
    <string name="login_fields_errmsg">Pleas fill in all fields</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="main_stanje">Stanje</string>
    <string name="main_unos">Unos</string>
    <string name="main_liste">Liste</string>
    <string name="main_profil">Profil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cekaonica_str">Broj pacijenata u cekaonici</string>
    <string name="hospitalizovani_str">Broj hospitalizovanih pacijenata:</string>
    <string name="otpusteni_str">Broj otpustenih pacijenata:</string>
    <string name="stanje_title_str">Pregled brojnog stanja pacijenata</string>
    <string name="profile_odjava">ODJAVA</string>
    <string name="profile_izmeni">IZMENI</string>
    <string name="profile_odustani">ODUSTANI</string>
    <string name="izmeni_radnika_title">Izmeni profil zdravstvenog radnika</string>
    <string name="profil_zdravstvenog_radnika">Profil zdravstvenog radnika</string>
    <string name="ime_zdravstvenog_radnika">Ime zdravstvenog radnika</string>
    <string name="placeholder">placeholder</string>
    <string name="odjava">ODJAVA</string>
    <string name="sacuvaj">SACUVAJ</string>
    <string name="prezime_zdravstvenog_radnika">Prezime zdravstvenog radnika</string>
    <string name="bolnica_u_kojoj_je_zaposlen">Bolnica u kojoj je zaposlen</string>
    <string name="test">Doso sam do ovde</string>
    <string name="otpusteni">Otpusteni</string>
    <string name="hospitalizacija">Hospitalizacija</string>
    <string name="cekaonica">Cekaonica</string>
    <string name="search">Pretrega po imenu i prezimenu</string>
</resources>
