<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splash_drawable"
    android:gravity="center|top"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_logo_img"
        android:contentDescription="@string/application_logo"
        />

    <TextView
        android:layout_width="180dp"
        android:layout_height="140dp"
        android:text="@string/login_decs"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textAlignment="center"
        />

    <EditText
        android:id="@+id/tf_login_ime"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/tf_login"
        android:padding="7dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white_alpha"
        android:hint="@string/login_hint_ime"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/tf_login_prezime"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/tf_login"
        android:padding="7dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white_alpha"
        android:hint="@string/login_hint_prezime"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/tf_login_bolnica"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/tf_login"
        android:padding="7dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white_alpha"
        android:inputType="text"
        android:hint="@string/login_hint_bolnica"
        />

    <EditText
        android:id="@+id/tf_login_pin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/tf_login"
        android:padding="7dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/white_alpha"
        android:textAlignment="center"
        android:inputType="numberPassword"
        android:hint="@string/login_hint_pin"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="65dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/login_btn_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login_btn_text" />

</LinearLayout>
