<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="center"
        app:tabBackground="@drawable/sl_tabs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tabMode="fixed"
        >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_cekaonica"
            android:text="@string/cekaonica"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_hospitalizovani"
            android:text="@string/hospitalizacija"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_otputsteni"
            android:text="@string/otpusteni"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>